--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+# Standard
 config.py
 __pycache__/*.pyc
 .vscode/launch.json
+.venv
+.vscode
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
+.python_packages
+
+# PyCharm
+.idea
+.venv
